<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_host"
        android:icon="@drawable/car"
        android:title="@string/host" />

    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/booking"
        android:title="@string/booking" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/message"
        android:title="@string/message" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account"
        android:title="@string/account" />

</menu>